--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		</div>
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/defs.js"></script>
+		<script src="js/board.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
